Table movies {
  id integer [primary key]
  title varchar
  release_year integer 
  studio_id integer
}


Table actors {
  id integer [primary key]
  first_name varchar
  last_name varchar
}

Table movies_actors {
  movie_id integer [primary key]
  actor_id integer [primary key]
}


Ref: movies_actors.movie_id > movies.id
Ref: movies_actors.actor_id > actors.id


